--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "          validation_data=(X_test, Y_test))\n",
     "\n",
     "\n",
-    "model_path = '/Users/luddecmc/Desktop/SKOLARBETE-ITHS/repos/Digit-classifier/nn_model.keras'\n",
+    "model_path = './nn_model.keras'\n",
     "model.save(model_path)\n"
    ]
   },
@@ -192,11 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '/Users/luddecmc/Desktop/SKOLARBETE-ITHS/repos/Digit-classifier/nn_model.keras'\n",
+    "model_path = './nn_model.keras'\n",
     "model.save(model_path)"
    ]
   }
